Добавлена страница корзины

--- a/css/_vars.sass
+++ b/css/_vars.sass
@@ -44,3 +44,8 @@ $checkout-text: #b3b2b2
 $radio-border: #555555
 $red: #ff0d0d
 $black: #000000
+$shop-cart-text: #575757
+$shop-cart-text2: #656565
+$cart-input-text: #b1b1b1
+$fieldset-bgc: #f5f3f3
+$line: #e2e2e2
