--- a/css/style.sass
+++ b/css/style.sass
@@ -6,6 +6,152 @@
     font-weight: $fw
     color: $color
 
+@-webkit-keyframes slide-in-top
+  0% 
+    -webkit-transform: translateY(-1000px)
+    transform: translateY(-1000px)
+    opacity: 0
+
+  100% 
+    -webkit-transform: translateY(0)
+    transform: translateY(0)
+    opacity: 1
+
+@keyframes slide-in-top
+    0%
+        -webkit-transform: translateY(-1000px)
+        transform: translateY(-1000px)
+        opacity: 0
+
+    100%
+        -webkit-transform: translateY(0)
+        transform: translateY(0)
+        opacity: 1
+
+@-webkit-keyframes heartbeat
+  from 
+    -webkit-transform: scale(1)
+    transform: scale(1)
+    -webkit-transform-origin: center center
+    transform-origin: center center
+    -webkit-animation-timing-function: ease-out
+    animation-timing-function: ease-out
+
+  10% 
+    -webkit-transform: scale(1.09)
+    transform: scale(1.09)
+    -webkit-animation-timing-function: ease-in
+    animation-timing-function: ease-in
+
+  17% 
+    -webkit-transform: scale(1.02)
+    transform: scale(1.02)
+    -webkit-animation-timing-function: ease-out
+    animation-timing-function: ease-out
+
+  33% 
+    -webkit-transform: scale(1.13)
+    transform: scale(1.13)
+    -webkit-animation-timing-function: ease-in
+    animation-timing-function: ease-in
+
+  45% 
+    -webkit-transform: scale(1)
+    transform: scale(1)
+    -webkit-animation-timing-function: ease-out
+    animation-timing-function: ease-out
+
+@keyframes heartbeat
+    from
+        -webkit-transform: scale(1)
+        transform: scale(1)
+        -webkit-transform-origin: center center
+        transform-origin: center center
+        -webkit-animation-timing-function: ease-out
+        animation-timing-function: ease-out
+
+    10%
+        -webkit-transform: scale(1.09)
+        transform: scale(1.09)
+        -webkit-animation-timing-function: ease-in
+        animation-timing-function: ease-in
+
+    17%
+        -webkit-transform: scale(1.02)
+        transform: scale(1.02)
+        -webkit-animation-timing-function: ease-out
+        animation-timing-function: ease-out
+
+    33%
+        -webkit-transform: scale(1.13)
+        transform: scale(1.13)
+        -webkit-animation-timing-function: ease-in
+        animation-timing-function: ease-in
+
+    45%
+        -webkit-transform: scale(1)
+        transform: scale(1)
+        -webkit-animation-timing-function: ease-out
+        animation-timing-function: ease-out
+
+@-webkit-keyframes jello-vertical
+  0% 
+    -webkit-transform: scale3d(1, 1, 1)
+    transform: scale3d(1, 1, 1)
+
+  30% 
+    -webkit-transform: scale3d(0.75, 1.25, 1)
+    transform: scale3d(0.75, 1.25, 1)
+
+  40% 
+    -webkit-transform: scale3d(1.25, 0.75, 1)
+    transform: scale3d(1.25, 0.75, 1)
+
+  50% 
+    -webkit-transform: scale3d(0.85, 1.15, 1)
+    transform: scale3d(0.85, 1.15, 1)
+
+  65% 
+    -webkit-transform: scale3d(1.05, 0.95, 1)
+    transform: scale3d(1.05, 0.95, 1)
+
+  75% 
+    -webkit-transform: scale3d(0.95, 1.05, 1)
+    transform: scale3d(0.95, 1.05, 1)
+
+  100% 
+    -webkit-transform: scale3d(1, 1, 1)
+    transform: scale3d(1, 1, 1)
+
+@keyframes jello-vertical
+    0%
+        -webkit-transform: scale3d(1, 1, 1)
+        transform: scale3d(1, 1, 1)
+
+    30%
+        -webkit-transform: scale3d(0.75, 1.25, 1)
+        transform: scale3d(0.75, 1.25, 1)
+
+    40%
+        -webkit-transform: scale3d(1.25, 0.75, 1)
+        transform: scale3d(1.25, 0.75, 1)
+
+    50%
+        -webkit-transform: scale3d(0.85, 1.15, 1)
+        transform: scale3d(0.85, 1.15, 1)
+
+    65%
+        -webkit-transform: scale3d(1.05, 0.95, 1)
+        transform: scale3d(1.05, 0.95, 1)
+
+    75%
+        -webkit-transform: scale3d(0.95, 1.05, 1)
+        transform: scale3d(0.95, 1.05, 1)
+
+    100%
+        -webkit-transform: scale3d(1, 1, 1)
+        transform: scale3d(1, 1, 1)
+
 *
     margin: 0
     padding: 0
@@ -19,6 +165,7 @@ body
 .container
     max-width: 1140px
     margin: 0 auto
+    box-sizing: border-box
 
 .logo
     text-decoration: none
@@ -44,14 +191,36 @@ body
         font-weight: 900
         color: $darkpink1
 
-.button
+.pink-button
     background-color: $darkpink1
     color: $white
     border: 1px solid transparent
+    transition: all 0.4s ease
+    cursor: pointer
+
+    &:hover
+        color: $darkpink1
+        background-color: $white
+        border-color: $darkpink1
+
+.light-button
+    background-color: transparent
+    border: 1px solid $light2
+    text-transform: uppercase
+    cursor: pointer
+    @include text(14px, 1, 700, $dark-gray2)
+    transition: all 0.4s ease
+
+    &:hover
+        background-color: $darkpink1
+        color: $white
+        border-color: transparent
 
 .drop-down
     border: 1px solid $light-border
     box-shadow: 0px 0px 8px 0px $light-shadow
+    -webkit-animation: slide-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both
+    animation: slide-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both
 
     &::before
         content: ''
@@ -124,10 +293,12 @@ body
         background-color: $light
         position: relative
         border-radius: 3px 0 0 3px
+        transition: all 0.4s ease
 
         &-img
             margin-left: 8px
             color: $gray-arrow
+            transition: all 0.4s ease
 
     &__search-input
         border: none
@@ -181,6 +352,7 @@ body
 
         &-container
             cursor: pointer
+            transition: background-color 0.4s ease
 
     &__search-icon
         position: absolute
@@ -196,6 +368,7 @@ body
         -webkit-box-align: center
         -ms-flex-align: center
         align-items: center
+        transition: color 0.4s ease
 
     &__search-submit-container:hover
         background-color: $darkpink1
@@ -236,6 +409,7 @@ body
             display: block
             padding-left: 3px
             margin-bottom: 5px
+            transition: color 0.4s ease
 
         & a:hover
             color: $darkpink1
@@ -265,6 +439,7 @@ body
 
     &__browse:hover &__browse-img
         color: $white
+        transform: rotate(180deg)
 
     &__top-right
         display: -webkit-box
@@ -286,6 +461,7 @@ body
 
         & path
             fill: $dark
+            transition: fill 0.4s ease
 
         .main-header__cart-wrapper:hover & path
             fill: $darkpink1
@@ -366,6 +542,7 @@ body
             text-transform: uppercase
             color: $light-gray2
             cursor: pointer
+            transition: color 0.4s ease
 
             &:hover
                 color: $darkpink1
@@ -446,6 +623,7 @@ body
         height: 38px
         text-transform: capitalize
         border: 1px solid $darkpink1
+        transition: all 0.4s ease
 
         &:hover
             background: $white
@@ -453,6 +631,10 @@ body
 
         &-img
             margin-left: 8px
+            transition: transform 0.4s ease
+
+        &:hover &-img
+            transform: rotate(180deg)
 
     &__nav-list
         list-style-type: none
@@ -477,6 +659,7 @@ body
         line-height: 26px
         font-weight: 700
         color: $dark
+        transition: color 0.4s ease
 
         &_active
             border-bottom: 3px solid $darkpink2
@@ -603,6 +786,11 @@ body
         display: block
         position: relative
 
+        &:hover
+            -webkit-animation: jello-vertical 0.9s both
+            animation: jello-vertical 0.9s both
+            z-index: 3
+
     &__banner:first-child
         margin-bottom: 20px
 
@@ -662,6 +850,7 @@ body
     &__card
         width: 261px
         position: relative
+        transition: box-shadow 0.4s ease
 
         &:not(:nth-child(-n+4))
             margin-top: 39px
@@ -671,8 +860,10 @@ body
 
         &-img
             width: 100%
+            transition: background-color 0.6s ease
 
             & img
+                transition: opacity 0.6s ease
                 display: block
 
         &-cart-button
@@ -698,6 +889,7 @@ body
                 justify-content: center
                 margin: 0 auto
                 pointer-events: all
+                transition: box-shadow 0.4s ease
 
                 .catalog &
                     border-radius: 3px
@@ -749,17 +941,17 @@ body
             color: $darkpink1
 
         &-stars
-            font-size: 15px
+            font-size: 0px
             line-height: 1.2
             font-weight: 400
             color: $stars
-            display: none
+            transition: font-size 0.4s ease
 
         &:hover
             box-shadow: 0px 5px 8px 0px rgba(0,0,0,0.15)
 
         &:hover &-stars
-            display: block
+            font-size: 15px
 
         &:hover &-img
             background-color: $dark-gray3
@@ -780,6 +972,7 @@ body
         color: $white
         cursor: pointer
         padding: 18px 20px 18px 24px
+        transition: all 0.4s ease
 
         & .fa
             font-size: 15px
@@ -809,6 +1002,7 @@ body
         &-button
             padding: 15px 7px 15px 14px
             cursor: pointer
+            transition: color 0.4s ease
 
             &:last-of-type
                 padding: 15px 14px 15px 7px
@@ -820,6 +1014,7 @@ body
             color: $light-gray4
             padding: 15px 7px
             cursor: pointer
+            transition: color 0.4s ease
 
             &:nth-of-type(7)
                 padding-right: 0
@@ -837,6 +1032,7 @@ body
             padding: 15px 0
             color: $light-gray4
             cursor: pointer
+            transition: color 0.4s ease
 
             &:hover
                 color: $darkpink2
@@ -849,6 +1045,7 @@ body
         line-height: 16px
         font-weight: 700
         color: $darkpink2
+        transition: all 0.4s ease
 
         &:hover
             background-color: $darkpink2
@@ -880,8 +1077,14 @@ body
     &__banner
         display: block
         position: relative
-        width: 767px
+        max-width: 767px
         height: 529px
+
+        &-img
+            display: block
+            width: 100%
+            height: 100%
+            object-fit: cover
 
         &-text
             position: absolute
@@ -903,7 +1106,6 @@ body
 
     &__info-boxes
         padding: 48px 43px 48px 32px
-        width: 100%
         display: flex
         flex-direction: column
         justify-content: space-between
@@ -1084,6 +1286,9 @@ body
             font-weight: 400
             letter-spacing: 0.025em
             cursor: pointer
+            transition: background-color 0.4s ease
+            -webkit-animation: heartbeat 1.5s ease-in-out infinite both
+            animation: heartbeat 1.5s ease-in-out infinite both
 
             &:hover
                 background-color: $darkpink3
@@ -1124,6 +1329,7 @@ body
             font-weight: 400
             color: $gray2
             display: block
+            transition: color 0.4s ease
 
             &:hover
                 color: $darkpink1
@@ -1158,6 +1364,7 @@ body
             border: 1px solid transparent
             text-align: center
             box-sizing: border-box
+            transition: all 0.4s ease
 
             &>.fa
                 vertical-align: middle
@@ -1204,6 +1411,7 @@ body
             font-weight: 300
             text-transform: uppercase
             color: $gray4
+            transition: color 0.4s ease
 
         &-item:last-of-type &-link
             font-weight: 700
@@ -1252,6 +1460,7 @@ body
                 font-size: 24px
                 line-height: 24px
                 color: $white
+                transition: color 0.4s ease
 
             &:hover .fa
                 color: $darkpink1
@@ -1343,6 +1552,7 @@ body
                     font-weight: 400
                     color: $light-gray7
                     padding: 0 15px
+                    background-color: transparent
                     box-sizing: border-box
 
         &-button
@@ -1358,11 +1568,13 @@ body
             justify-content: center
             padding: 16px 0
             cursor: pointer
+            transition: all 0.4s ease
 
             &-svg
                 margin-right: 15px
 
                 &-path
+                    transition: fill 0.4s ease
                     fill: $darkpink2
 
             &:hover
@@ -1422,6 +1634,7 @@ body
             line-height: 33px
             font-weight: 400
             color: $gray
+            transition: color 0.4s ease
 
             &:hover
                 color: $darkpink2
@@ -1462,6 +1675,7 @@ body
             font-weight: 400
             color: $gray
             padding: 0 10px
+            transition: color 0.4s ease
 
             &:hover
                 color: $darkpink2
@@ -1626,3 +1840,6 @@ body
         margin-top: 39px
 
 @import "checkout"
+@import "cart"
+@import "tablet"
+@import "mobile"
