--- a/css/_checkout.sass
+++ b/css/_checkout.sass
@@ -77,6 +77,7 @@
         padding: 19px 54px
         margin-top: 5px
         cursor: pointer
+        transition: all 0.4 ease
 
         &:hover
             background-color: $darkpink1
@@ -115,6 +116,7 @@
         margin-left: 10px
         box-sizing: border-box
         padding: 29px 22px 0
+        transition: color 0.4s ease
 
         &:hover
             color: $darkpink1
