--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,156 @@
 @charset "UTF-8";
+@-webkit-keyframes slide-in-top {
+  0% {
+    -webkit-transform: translateY(-1000px);
+    transform: translateY(-1000px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes slide-in-top {
+  0% {
+    -webkit-transform: translateY(-1000px);
+    transform: translateY(-1000px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@-webkit-keyframes heartbeat {
+  from {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transform-origin: center center;
+    transform-origin: center center;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  10% {
+    -webkit-transform: scale(1.09);
+    transform: scale(1.09);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  17% {
+    -webkit-transform: scale(1.02);
+    transform: scale(1.02);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  33% {
+    -webkit-transform: scale(1.13);
+    transform: scale(1.13);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  45% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+}
+@keyframes heartbeat {
+  from {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transform-origin: center center;
+    transform-origin: center center;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  10% {
+    -webkit-transform: scale(1.09);
+    transform: scale(1.09);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  17% {
+    -webkit-transform: scale(1.02);
+    transform: scale(1.02);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  33% {
+    -webkit-transform: scale(1.13);
+    transform: scale(1.13);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  45% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+}
+@-webkit-keyframes jello-vertical {
+  0% {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+  30% {
+    -webkit-transform: scale3d(0.75, 1.25, 1);
+    transform: scale3d(0.75, 1.25, 1);
+  }
+  40% {
+    -webkit-transform: scale3d(1.25, 0.75, 1);
+    transform: scale3d(1.25, 0.75, 1);
+  }
+  50% {
+    -webkit-transform: scale3d(0.85, 1.15, 1);
+    transform: scale3d(0.85, 1.15, 1);
+  }
+  65% {
+    -webkit-transform: scale3d(1.05, 0.95, 1);
+    transform: scale3d(1.05, 0.95, 1);
+  }
+  75% {
+    -webkit-transform: scale3d(0.95, 1.05, 1);
+    transform: scale3d(0.95, 1.05, 1);
+  }
+  100% {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+}
+@keyframes jello-vertical {
+  0% {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+  30% {
+    -webkit-transform: scale3d(0.75, 1.25, 1);
+    transform: scale3d(0.75, 1.25, 1);
+  }
+  40% {
+    -webkit-transform: scale3d(1.25, 0.75, 1);
+    transform: scale3d(1.25, 0.75, 1);
+  }
+  50% {
+    -webkit-transform: scale3d(0.85, 1.15, 1);
+    transform: scale3d(0.85, 1.15, 1);
+  }
+  65% {
+    -webkit-transform: scale3d(1.05, 0.95, 1);
+    transform: scale3d(1.05, 0.95, 1);
+  }
+  75% {
+    -webkit-transform: scale3d(0.95, 1.05, 1);
+    transform: scale3d(0.95, 1.05, 1);
+  }
+  100% {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+}
 * {
   margin: 0;
   padding: 0;
@@ -14,6 +166,7 @@ body {
 .container {
   max-width: 1140px;
   margin: 0 auto;
+  box-sizing: border-box;
 }
 
 .logo {
@@ -41,15 +194,41 @@ body {
   color: #f16d7f;
 }
 
-.button {
+.pink-button {
   background-color: #f16d7f;
   color: #ffffff;
   border: 1px solid transparent;
+  transition: all 0.4s ease;
+  cursor: pointer;
+}
+.pink-button:hover {
+  color: #f16d7f;
+  background-color: #ffffff;
+  border-color: #f16d7f;
+}
+
+.light-button {
+  background-color: transparent;
+  border: 1px solid #eaeaea;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-size: 14px;
+  line-height: 1;
+  font-weight: 700;
+  color: #4a4a4a;
+  transition: all 0.4s ease;
+}
+.light-button:hover {
+  background-color: #f16d7f;
+  color: #ffffff;
+  border-color: transparent;
 }
 
 .drop-down {
   border: 1px solid #ececec;
   box-shadow: 0px 0px 8px 0px #aaaaaa;
+  -webkit-animation: slide-in-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  animation: slide-in-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
 .drop-down::before {
   content: "";
@@ -122,10 +301,12 @@ body {
   background-color: #f9f9f9;
   position: relative;
   border-radius: 3px 0 0 3px;
+  transition: all 0.4s ease;
 }
 .main-header__browse-img {
   margin-left: 8px;
   color: #838383;
+  transition: all 0.4s ease;
 }
 .main-header__search-input {
   border: none;
@@ -179,6 +360,7 @@ body {
 }
 .main-header__search-submit-container {
   cursor: pointer;
+  transition: background-color 0.4s ease;
 }
 .main-header__search-icon {
   position: absolute;
@@ -194,6 +376,7 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  transition: color 0.4s ease;
 }
 .main-header__search-submit-container:hover {
   background-color: #f16d7f;
@@ -234,6 +417,7 @@ body {
   display: block;
   padding-left: 3px;
   margin-bottom: 5px;
+  transition: color 0.4s ease;
 }
 .main-header__category a:hover {
   color: #f16d7f;
@@ -263,6 +447,7 @@ body {
 }
 .main-header__browse:hover .main-header__browse-img {
   color: #ffffff;
+  transform: rotate(180deg);
 }
 .main-header__top-right {
   display: -webkit-box;
@@ -284,6 +469,7 @@ body {
 }
 .main-header__cart-link path {
   fill: #222222;
+  transition: fill 0.4s ease;
 }
 .main-header__cart-wrapper:hover .main-header__cart-link path {
   fill: #f16d7f;
@@ -365,6 +551,7 @@ body {
   text-transform: uppercase;
   color: #c0c0c0;
   cursor: pointer;
+  transition: color 0.4s ease;
 }
 .main-header__cart-card-delete:hover {
   color: #f16d7f;
@@ -445,6 +632,7 @@ body {
   height: 38px;
   text-transform: capitalize;
   border: 1px solid #f16d7f;
+  transition: all 0.4s ease;
 }
 .main-header__account:hover {
   background: #ffffff;
@@ -452,6 +640,10 @@ body {
 }
 .main-header__account-img {
   margin-left: 8px;
+  transition: transform 0.4s ease;
+}
+.main-header__account:hover .main-header__account-img {
+  transform: rotate(180deg);
 }
 .main-header__nav-list {
   list-style-type: none;
@@ -476,6 +668,7 @@ body {
   line-height: 26px;
   font-weight: 700;
   color: #222222;
+  transition: color 0.4s ease;
 }
 .main-header__list-link_active {
   border-bottom: 3px solid #ef5b70;
@@ -604,6 +797,11 @@ body {
   display: block;
   position: relative;
 }
+.banners__banner:hover {
+  -webkit-animation: jello-vertical 0.9s both;
+  animation: jello-vertical 0.9s both;
+  z-index: 3;
+}
 .banners__banner:first-child {
   margin-bottom: 20px;
 }
@@ -664,6 +862,7 @@ body {
 .fetured-items__card {
   width: 261px;
   position: relative;
+  transition: box-shadow 0.4s ease;
 }
 .fetured-items__card:not(:nth-child(-n+4)) {
   margin-top: 39px;
@@ -673,8 +872,10 @@ body {
 }
 .fetured-items__card-img {
   width: 100%;
+  transition: background-color 0.6s ease;
 }
 .fetured-items__card-img img {
+  transition: opacity 0.6s ease;
   display: block;
 }
 .fetured-items__card-cart-button {
@@ -700,6 +901,7 @@ body {
   justify-content: center;
   margin: 0 auto;
   pointer-events: all;
+  transition: box-shadow 0.4s ease;
 }
 .catalog .fetured-items__card-cart-button-link {
   border-radius: 3px;
@@ -751,17 +953,17 @@ body {
   color: #f16d7f;
 }
 .fetured-items__card-stars {
-  font-size: 15px;
+  font-size: 0px;
   line-height: 1.2;
   font-weight: 400;
   color: #e4af48;
-  display: none;
+  transition: font-size 0.4s ease;
 }
 .fetured-items__card:hover {
   box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.15);
 }
 .fetured-items__card:hover .fetured-items__card-stars {
-  display: block;
+  font-size: 15px;
 }
 .fetured-items__card:hover .fetured-items__card-img {
   background-color: #3a3838;
@@ -782,6 +984,7 @@ body {
   color: #ffffff;
   cursor: pointer;
   padding: 18px 20px 18px 24px;
+  transition: all 0.4s ease;
 }
 .fetured-items__browse-all .fa {
   font-size: 15px;
@@ -809,6 +1012,7 @@ body {
 .fetured-items__pagination-button {
   padding: 15px 7px 15px 14px;
   cursor: pointer;
+  transition: color 0.4s ease;
 }
 .fetured-items__pagination-button:last-of-type {
   padding: 15px 14px 15px 7px;
@@ -820,6 +1024,7 @@ body {
   color: #c4c4c4;
   padding: 15px 7px;
   cursor: pointer;
+  transition: color 0.4s ease;
 }
 .fetured-items__pagination-page:nth-of-type(7) {
   padding-right: 0;
@@ -837,6 +1042,7 @@ body {
   padding: 15px 0;
   color: #c4c4c4;
   cursor: pointer;
+  transition: color 0.4s ease;
 }
 .fetured-items__pagination-dots:hover {
   color: #ef5b70;
@@ -849,6 +1055,7 @@ body {
   line-height: 16px;
   font-weight: 700;
   color: #ef5b70;
+  transition: all 0.4s ease;
 }
 .fetured-items__view-all:hover {
   background-color: #ef5b70;
@@ -881,8 +1088,14 @@ body {
 .shop-info__banner {
   display: block;
   position: relative;
-  width: 767px;
+  max-width: 767px;
   height: 529px;
+}
+.shop-info__banner-img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .shop-info__banner-text {
   position: absolute;
@@ -904,7 +1117,6 @@ body {
 }
 .shop-info__info-boxes {
   padding: 48px 43px 48px 32px;
-  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -1083,6 +1295,9 @@ body {
   font-weight: 400;
   letter-spacing: 0.025em;
   cursor: pointer;
+  transition: background-color 0.4s ease;
+  -webkit-animation: heartbeat 1.5s ease-in-out infinite both;
+  animation: heartbeat 1.5s ease-in-out infinite both;
 }
 .subscribe__form-submit:hover {
   background-color: #B84252;
@@ -1124,6 +1339,7 @@ body {
   font-weight: 400;
   color: #898989;
   display: block;
+  transition: color 0.4s ease;
 }
 .footer-info__nav-link:hover {
   color: #f16d7f;
@@ -1159,6 +1375,7 @@ body {
   border: 1px solid transparent;
   text-align: center;
   box-sizing: border-box;
+  transition: all 0.4s ease;
 }
 .copyrights__social-media-button > .fa {
   vertical-align: middle;
@@ -1206,6 +1423,7 @@ body {
   font-weight: 300;
   text-transform: uppercase;
   color: #636363;
+  transition: color 0.4s ease;
 }
 .main-content-header__breadcrumb-item:last-of-type .main-content-header__breadcrumb-link {
   font-weight: 700;
@@ -1255,6 +1473,7 @@ body {
   font-size: 24px;
   line-height: 24px;
   color: #ffffff;
+  transition: color 0.4s ease;
 }
 .product__img-button:hover .fa {
   color: #f16d7f;
@@ -1345,6 +1564,7 @@ body {
   font-weight: 400;
   color: #bcbcbc;
   padding: 0 15px;
+  background-color: transparent;
   box-sizing: border-box;
 }
 .product__info-button {
@@ -1360,11 +1580,13 @@ body {
   justify-content: center;
   padding: 16px 0;
   cursor: pointer;
+  transition: all 0.4s ease;
 }
 .product__info-button-svg {
   margin-right: 15px;
 }
 .product__info-button-svg-path {
+  transition: fill 0.4s ease;
   fill: #ef5b70;
 }
 .product__info-button:hover {
@@ -1423,6 +1645,7 @@ body {
   line-height: 33px;
   font-weight: 400;
   color: #6f6e6e;
+  transition: color 0.4s ease;
 }
 .catalog__sidebar-accordion-link:hover {
   color: #ef5b70;
@@ -1461,6 +1684,7 @@ body {
   font-weight: 400;
   color: #6f6e6e;
   padding: 0 10px;
+  transition: color 0.4s ease;
 }
 .catalog__top-filters-tranding-now-link:hover {
   color: #ef5b70;
@@ -1723,6 +1947,7 @@ body {
   padding: 19px 54px;
   margin-top: 5px;
   cursor: pointer;
+  transition: all 0.4 ease;
 }
 .checkout__submit-button:hover {
   background-color: #f16d7f;
@@ -1772,7 +1997,263 @@ body {
   margin-left: 10px;
   box-sizing: border-box;
   padding: 29px 22px 0;
+  transition: color 0.4s ease;
 }
 .checkout__drop-pass-link:hover {
   color: #f16d7f;
+}
+
+.shopping-cart__products {
+  display: flex;
+  margin: 90px 0 44px;
+  position: relative;
+}
+.shopping-cart__products-info {
+  width: 520px;
+}
+.shopping-cart__products-title {
+  font-size: 13px;
+  line-height: 20px;
+  font-weight: 700;
+  color: #222222;
+  text-transform: uppercase;
+  letter-spacing: -0.015em;
+  width: 100%;
+  padding-bottom: 20px;
+}
+.shopping-cart__products-title::after {
+  display: block;
+  content: "";
+  width: 1140px;
+  position: absolute;
+  height: 1px;
+  background-color: #eaeaea;
+  top: 33px;
+  left: 0;
+}
+.shopping-cart__products-prices {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.shopping-cart__products-prices-column {
+  display: flex;
+  flex-direction: column;
+}
+.shopping-cart__products-prices-column-cell {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 13px;
+  line-height: 20px;
+  font-weight: 400;
+  color: #656565;
+  text-transform: uppercase;
+  flex-grow: 1;
+}
+.shopping-cart__product-link {
+  display: flex;
+  padding: 25px 0;
+  width: 520px;
+  box-sizing: border-box;
+  position: relative;
+}
+.shopping-cart__product-link::after {
+  display: block;
+  content: "";
+  width: 1140px;
+  position: absolute;
+  height: 1px;
+  background-color: #eaeaea;
+  bottom: 0;
+  left: 0;
+}
+.shopping-cart__product-img {
+  width: 100px;
+}
+.shopping-cart__product-description {
+  padding: 13px 21px;
+}
+.shopping-cart__product-name {
+  font-size: 13px;
+  line-height: 13px;
+  font-weight: 400;
+  color: #222222;
+  text-transform: uppercase;
+}
+.shopping-cart__product-stars {
+  font-size: 13px;
+  line-height: 13px;
+  font-weight: 400;
+  color: #e4af48;
+  margin: 11px 0 15px;
+  visibility: hidden;
+}
+.shopping-cart__product-text {
+  font-size: 13px;
+  line-height: 20px;
+  font-weight: 400;
+  color: #575757;
+}
+.shopping-cart__product-text-lighter {
+  font-weight: 300;
+  color: #6f6e6e;
+}
+.shopping-cart__product-quantity {
+  width: 54px;
+  border: 1px solid #eaeaea;
+  box-sizing: border-box;
+  font-size: 13px;
+  line-height: 30px;
+  font-weight: 400;
+  color: #656565;
+  padding-left: 22px;
+}
+.shopping-cart__product-delete {
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  font-size: 16px;
+  line-height: 1.2;
+  font-weight: 400;
+  color: #c0c0c0;
+  transition: color 0.4s ease;
+}
+.shopping-cart__product-delete:hover {
+  color: #ff0d0d;
+}
+.shopping-cart__product-link:hover .shopping-cart__product-stars {
+  visibility: inherit;
+}
+.shopping-cart__buttons {
+  display: flex;
+  justify-content: space-between;
+}
+.shopping-cart__button {
+  padding: 19px 39px;
+}
+.shopping-cart__form {
+  margin: 63px 0 79px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.shopping-cart__fieldset {
+  width: 355px;
+  display: flex;
+  flex-direction: column;
+  border: none;
+  align-items: flex-start;
+  position: relative;
+  font-size: 14px;
+  line-height: 25px;
+  font-weight: 300;
+  color: #000000;
+}
+.shopping-cart__bold-text {
+  font-size: 16px;
+  line-height: 1;
+  font-weight: 700;
+  color: #222222;
+  text-transform: uppercase;
+  margin-bottom: 22px;
+}
+.shopping-cart__form-field {
+  width: 100%;
+  background-color: transparent;
+  border: 1px solid #eaeaea;
+  margin-bottom: 20px;
+  font-size: 13px;
+  line-height: 1;
+  font-weight: 300;
+  color: #b1b1b1;
+  padding: 16px 18px;
+  box-sizing: border-box;
+  appearance: none;
+  cursor: text;
+}
+.shopping-cart__form-field:focus {
+  color: #222222;
+}
+.shopping-cart__form-field::placeholder {
+  color: #b1b1b1;
+}
+.shopping-cart__form-arrow {
+  position: absolute;
+  font-size: 15px;
+  line-height: 1;
+  font-weight: 400;
+  color: #b1b1b1;
+  right: 12px;
+  top: 15px;
+  transition: transform 0.4s ease;
+  pointer-events: none;
+}
+.shopping-cart__form-field:focus ~ .shopping-cart__form-arrow {
+  transform: rotate(180deg);
+}
+.shopping-cart__form-option {
+  font-size: 13px;
+  line-height: 1;
+  font-weight: 300;
+  color: #222222;
+}
+.shopping-cart__form-button {
+  font-size: 11px;
+  padding: 12px 16px;
+  margin-top: 5px;
+}
+.shopping-cart__form-text {
+  margin-bottom: 18px;
+}
+.shopping-cart__fieldset-price {
+  width: 360px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  background-color: #f5f3f3;
+  border: none;
+  padding: 42px;
+  box-sizing: border-box;
+  font-size: 11px;
+  line-height: 1;
+  font-weight: 400;
+  color: #222222;
+  text-transform: uppercase;
+}
+.shopping-cart__fieldset-price .shopping-cart__bold-text {
+  margin: 14px 0 22px;
+}
+.shopping-cart__text-price {
+  margin-left: 10px;
+}
+.shopping-cart__bold-text .shopping-cart__text-price {
+  color: #f16d7f;
+}
+.shopping-cart__line {
+  width: 100%;
+  border: none;
+  height: 0;
+  border-top: 1px solid #e2e2e2;
+  margin-bottom: 17px;
+}
+.shopping-cart__pink-button {
+  text-transform: uppercase;
+  padding: 18px 35px;
+  align-self: center;
+  font-size: 16px;
+  line-height: 1;
+  font-weight: 700;
+  color: #ffffff;
+}
+
+@media (max-width: 1171px) {
+  .container {
+    margin: 0 16px;
+    width: 100%;
+  }
+
+  .banners {
+    flex-direction: column;
+  }
 }/*# sourceMappingURL=style.css.map */
