--- a/css/style.css
+++ b/css/style.css
@@ -308,6 +308,9 @@ body {
   color: #838383;
   transition: all 0.4s ease;
 }
+.main-header__search-form {
+  display: flex;
+}
 .main-header__search-input {
   border: none;
   width: 280px;
@@ -361,13 +364,13 @@ body {
 .main-header__search-submit-container {
   cursor: pointer;
   transition: background-color 0.4s ease;
+  position: relative;
 }
 .main-header__search-icon {
   position: absolute;
-  width: 36px;
   text-align: center;
   color: #a4a4a4;
-  right: 0;
+  right: 11px;
   top: 12px;
   font-size: 14px;
   display: -webkit-box;
@@ -405,8 +408,7 @@ body {
 .main-header__category {
   list-style-type: none;
 }
-.main-header__category > a {
-  text-decoration: none;
+.main-header__category > h3 {
   font-size: 14px;
   line-height: 32px;
   font-weight: 400;
@@ -414,10 +416,8 @@ body {
   color: #232323;
   text-transform: uppercase;
   border-bottom: 1px solid #e8e8e8;
-  display: block;
   padding-left: 3px;
   margin-bottom: 5px;
-  transition: color 0.4s ease;
 }
 .main-header__category a:hover {
   color: #f16d7f;
@@ -457,6 +457,21 @@ body {
   -ms-flex-align: end;
   align-items: flex-end;
   position: relative;
+}
+.main-header__adaptive-links {
+  display: none;
+}
+.main-header__right-button {
+  color: #222222;
+  transition: color 0.4s ease;
+  background-color: transparent;
+  border: none;
+  padding: 19px 14px;
+  font-size: 25px;
+  line-height: 1;
+}
+.main-header__right-button:hover {
+  color: #f16d7f;
 }
 .main-header__cart-wrapper {
   margin-right: 12px;
@@ -581,7 +596,14 @@ body {
   font-weight: 700;
   text-transform: uppercase;
   color: #f16d7f;
-  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.4s ease;
+}
+.main-header__cart-checkout:hover {
+  background-color: #f16d7f;
+  color: #ffffff;
 }
 .main-header__go-to-cart {
   width: 225px;
@@ -791,7 +813,7 @@ body {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  margin: 98px auto;
+  padding: 98px 0;
 }
 .banners__banner {
   display: block;
@@ -804,6 +826,10 @@ body {
 }
 .banners__banner:first-child {
   margin-bottom: 20px;
+}
+.banners__img {
+  object-fit: cover;
+  width: 100%;
 }
 .banners__text {
   position: absolute;
@@ -851,6 +877,7 @@ body {
   font-weight: 400;
   letter-spacing: 0.025em;
   color: #9f9f9f;
+  text-align: center;
 }
 .fetured-items__cards {
   display: flex;
@@ -869,6 +896,7 @@ body {
 }
 .fetured-items__card-link {
   display: block;
+  width: 100%;
 }
 .fetured-items__card-img {
   width: 100%;
@@ -877,6 +905,7 @@ body {
 .fetured-items__card-img img {
   transition: opacity 0.6s ease;
   display: block;
+  width: 100%;
 }
 .fetured-items__card-cart-button {
   position: absolute;
@@ -1088,12 +1117,11 @@ body {
 .shop-info__banner {
   display: block;
   position: relative;
-  max-width: 767px;
   height: 529px;
 }
 .shop-info__banner-img {
   display: block;
-  width: 100%;
+  width: 767px;
   height: 100%;
   object-fit: cover;
 }
@@ -1118,8 +1146,10 @@ body {
 .shop-info__info-boxes {
   padding: 48px 43px 48px 32px;
   display: flex;
+  width: 100%;
   flex-direction: column;
   justify-content: space-between;
+  box-sizing: border-box;
 }
 .shop-info__info-box {
   display: flex;
@@ -1142,7 +1172,7 @@ body {
 }
 
 .subscribe {
-  height: 438px;
+  min-height: 438px;
   background: url("../img/subscribe-bg.png");
   background-position: center bottom;
   background-repeat: no-repeat;
@@ -1299,12 +1329,9 @@ body {
   -webkit-animation: heartbeat 1.5s ease-in-out infinite both;
   animation: heartbeat 1.5s ease-in-out infinite both;
 }
-.subscribe__form-submit:hover {
-  background-color: #B84252;
-}
 
 .footer-info {
-  padding: 109px 89px;
+  padding: 109px 0 89px;
   display: flex;
   justify-content: space-between;
 }
@@ -1320,6 +1347,13 @@ body {
   font-weight: 300;
   color: #898989;
   letter-spacing: 0.025em;
+}
+.footer-info__company-description-text:not(:first-child) {
+  margin-top: 20px;
+}
+.footer-info__nav-wrapper {
+  display: flex;
+  justify-content: space-between;
 }
 .footer-info__nav {
   width: 200px;
@@ -1546,6 +1580,7 @@ body {
   width: 537px;
   justify-content: space-between;
   margin: 58px 0 28px;
+  border: none;
 }
 .product__info-filter-text {
   color: #2f2f2f;
@@ -1853,7 +1888,6 @@ body {
 }
 .checkout__accordion {
   border-bottom: 1px solid #e8e8e8;
-  padding: 32px 0;
 }
 .checkout__accordion-title {
   font-size: 16px;
@@ -1862,6 +1896,7 @@ body {
   color: #222222;
   text-transform: uppercase;
   cursor: pointer;
+  padding: 32px 0;
 }
 .checkout__accordion-title::before {
   counter-increment: accordion;
@@ -2250,10 +2285,272 @@ body {
 @media (max-width: 1171px) {
   .container {
     margin: 0 16px;
+  }
+
+  .main-header__browse-container {
+    display: none;
+  }
+  .main-header__search-input {
+    border-left: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  .main-header__adaptive-links {
+    display: flex;
+  }
+  .main-header__top-left {
     width: 100%;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 16px 0;
+  }
+  .main-header__search {
+    margin-top: 16px;
+    width: 100%;
+    align-self: center;
+  }
+  .main-header__search-form {
+    width: 100%;
+  }
+  .main-header__search-input {
+    width: 100%;
+  }
+  .main-header__left-links {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+  }
+  .main-header__top-right {
+    display: none;
+  }
+  .main-header__cart-wrapper {
+    margin: 0;
+  }
+  .main-header__bottom {
+    display: none;
+  }
+
+  .slider > .container {
+    height: 450px;
+    background-size: cover;
+    background-position-y: center;
+  }
+
+  .slider__text-box {
+    margin-top: 180px;
+  }
+
+  .slider__text {
+    font-size: 24px;
+    line-height: 1;
+  }
+
+  .slider__text-big {
+    font-size: 40px;
+    margin-bottom: 1vh;
+  }
+
+  .banners {
+    padding: 32px 0;
+  }
+  .banners__wrapper:first-child {
+    margin-right: 20px;
+  }
+  .banners__text {
+    font-size: 14px;
+  }
+  .banners__text-pink {
+    font-size: 20px;
+  }
+
+  .fetured-items__cards {
+    margin: 32px 0;
+  }
+  .fetured-items__card {
+    width: 23%;
+    margin: 0;
+  }
+  .fetured-items__card-cart-button {
+    top: 25%;
+  }
+
+  .shop-info {
+    margin: 64px 16px;
+    flex-direction: column;
+  }
+  .shop-info__banner {
+    height: 100%;
+  }
+  .shop-info__banner-img {
+    width: 100%;
+  }
+  .shop-info__info-boxes {
+    flex-direction: row;
+  }
+  .shop-info__info-box {
+    flex-direction: column;
+    width: 30%;
+    align-items: center;
+  }
+  .shop-info__info-box-text {
+    width: 100%;
+    margin-top: 12px;
+    text-align: center;
+  }
+
+  .subscribe {
+    padding: 64px 0;
+  }
+  .subscribe > .container {
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+  }
+  .subscribe__quote-sliders {
+    margin: 0 auto;
+  }
+  .subscribe__quote-sliders-controls-button {
+    width: 15%;
+  }
+  .subscribe__quote-sliders-controls-button:nth-of-type(1) {
+    left: 20%;
+  }
+  .subscribe__quote-sliders-controls-button:nth-of-type(2) {
+    left: 42.5%;
+  }
+  .subscribe__quote-sliders-controls-button:nth-of-type(3) {
+    left: 65%;
+  }
+  .subscribe__form-box {
+    width: 100%;
+    margin-top: 48px;
+  }
+
+  .footer-info {
+    flex-direction: column;
+    padding: 64px 0;
+  }
+  .footer-info__company-description {
+    width: 100%;
+    margin-bottom: 32px;
+  }
+  .footer-info__company-description-text {
+    margin-top: 20px;
+  }
+}
+@media (max-width: 767px) {
+  .logo {
+    margin: 0;
+  }
+
+  .slider > .container {
+    background-image: none;
+    display: flex;
+    justify-content: center;
+    height: auto;
+  }
+  .slider__text-box {
+    margin: 150px 0;
   }
 
   .banners {
     flex-direction: column;
+  }
+  .banners__wrapper {
+    margin-right: 0 !important;
+  }
+  .banners__wrapper:first-child {
+    margin-bottom: 20px;
+  }
+
+  .fetured-items__card {
+    width: 48%;
+  }
+  .fetured-items__card:not(:nth-child(-n+2)) {
+    margin-top: 20px;
+  }
+
+  .shop-info__banner-text {
+    font-size: 30px;
+    top: 20%;
+    width: 250px;
+    left: 5%;
+  }
+  .shop-info__banner-text-big {
+    font-size: 40px;
+  }
+  .shop-info__info-boxes {
+    flex-direction: column;
+  }
+  .shop-info__info-box {
+    width: 100%;
+  }
+  .shop-info__info-box:not(:first-of-type) {
+    margin-top: 20px;
+  }
+
+  .subscribe__quote-sliders {
+    width: 300px;
+  }
+  #slide2:checked ~ .subscribe__quote-sliders-wrapper {
+    margin-left: -300px;
+  }
+  #slide3:checked ~ .subscribe__quote-sliders-wrapper {
+    margin-left: -600px;
+  }
+  .subscribe__quote-slider {
+    min-width: 300px;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding-bottom: 20px;
+  }
+  .subscribe__quote-slider-img {
+    margin: 0 0 20px;
+  }
+  .subscribe__form-email {
+    width: 70%;
+  }
+  .subscribe__form-submit {
+    width: 30%;
+  }
+
+  .footer-info__nav-wrapper {
+    flex-direction: column;
+  }
+  .footer-info__nav {
+    width: 100%;
+  }
+  .footer-info__nav:not(:first-of-type) {
+    margin-top: 32px;
+  }
+  .footer-info__nav-title {
+    padding-bottom: 15px;
+  }
+
+  .copyrights > .container {
+    flex-direction: column-reverse;
+  }
+
+  .copyrights__social-media {
+    margin-bottom: 32px;
+  }
+}
+@media (max-width: 550px) {
+  .shop-info__banner-text {
+    font-size: 14px;
+    width: 130px;
+  }
+  .shop-info__banner-text-big {
+    font-size: 20px;
+  }
+}
+@media (max-width: 400px) {
+  .logo {
+    margin-bottom: 10px;
+  }
+
+  .main-header__left-links {
+    flex-direction: column;
+    align-items: center;
   }
 }/*# sourceMappingURL=style.css.map */
