--- a/css/_cart.sass
+++ b/css/_cart.sass
@@ -43,22 +43,27 @@
 
     &__product
 
+        &-prices-mobile
+            display: none
+
         &-link
             display: flex
             padding: 25px 0
             width: 520px
             box-sizing: border-box
+
+        &-link-wrapper
             position: relative
 
-            &::after
-                display: block
-                content: ''
-                width: 1140px
-                position: absolute
-                height: 1px
-                background-color: $light2
-                bottom: 0
-                left: 0
+        &-link-wrapper::after
+            display: block
+            content: ''
+            width: 1140px
+            position: absolute
+            height: 1px
+            background-color: $light2
+            bottom: 0
+            left: 0
 
         &-img
             width: 100px
@@ -98,6 +103,9 @@
 
             &:hover
                 color: $red
+
+            &-mobile
+                display: none
 
         &-link:hover &-stars
             visibility: inherit
