--- a/css/_checkout.sass
+++ b/css/_checkout.sass
@@ -77,7 +77,7 @@
         padding: 19px 54px
         margin-top: 5px
         cursor: pointer
-        transition: all 0.4 ease
+        transition: all 0.4s ease
 
         &:hover
             background-color: $darkpink1
